syntax = "proto3";

package prime;

option go_package = "github.com/Ruthvik10/grpc-go/calculator/proto";

message PrimeRequest {
    int32 number = 1;
}

message PrimeReponse {
    int32 result = 1;
}

service PrimeService {
    rpc Prime (PrimeRequest) returns (stream PrimeReponse);
}