syntax = "proto3";

package sum;

option go_package = "github.com/Ruthvik10/grpc-go/calculator/proto";

message SumRequest {
    int32 first_num = 1;
    int32 second_num = 2;
}

message SumResponse {
    int32 sum = 1;
}

service SumService {
    rpc Sum (SumRequest) returns (SumResponse);
}